# BC_hw-2

UsingCMake/: CMakeLists.txt
UsingMake/: makefile
UsingMake/src/: useCalculator.cpp
